2005-11-14  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/JComponent.java:
	(removeNotify): Removed unncessary InputMap and ActionMap inheritance
	code. Added FIXME to remove the WHEN_IN_FOCUSED_WINDOW bindings from 
	the KeyboardManager.
	* javax/swing/JMenuBar.java:
	(removeNotify): Added FIXME to unregister this JMenuBar from the 
	KeyboardManager.

2005-11-14  Wolfgang Baer  <WBaer@gmx.de>

	* javax/print/attribute/HashAttributeSet.java:
	Added api docs to class and clarified method documentation.
	(toArray): Get iterator from values instead of entries.
	(hashCode): Compute hashcode according to specification.
	(get): Throw NullPointerException if category is null.
	(HashAttributeSet(Attribute[],Class)): Changed to allow
	Attribute[] to be null.
							
2005-11-14  Mark Wielaard  <mark@klomp.org>

	As suggested by Joao Victor <jvital@gmail.com>:
	* javax/swing/Timer.java (Waker): Removed class.
	(Task): New class.
	(timer): New field.
	(running): Removed field.
	(waker): Likewise.
	(task): New field.
	(isRunning): Check whether task is null.
	(start): Create task and schedule it with timer.
	(stop): Cancel task and clear field.
	(queueEvent): Synchronized on queueLock.

2005-11-14  Lillian Angel  <langel@redhat.com>

	* javax/swing/JTree.java
	(expandPath): No need to get the parent path.
	* javax/swing/event/TreeModelEvent.java:
	Variables should be initialized to null.
	(toString): Implemented.
	* javax/swing/plaf/basic/BasicTreeUI.java
	(treeStructureChanged): Implemented.
	(getParent): Added check to avoid infinite loop.
	(findNode): Fixed check to use getChild, instead of
	getIndexOfChild.
	(updateCurrentVisiblePath): Added a loop to check
	the parent's sibling, if the current node has no
	other siblings.

2005-11-14  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/ActionMap.java: 
	(keys): Return null if the map is empty.
	(allKeys): Likewise.
	* javax/swing/InputMap.java:
	(keys): Return null if the map is empty.